# DecisionTrace

./: .gitignore  LICENSE  README.md  decision.json  decision2.json  pyproject.toml  requirements.txt
logs/: decision_log.jsonl
src/decisiontrace/: __init__.py  cli.py  hasher.py  logger.py  replay.py  schema.py
tests/: test_main.py
